terraform/aws/route_table/route_table_association.tf
resource "aws_route_table_association" "tfer--subnet-00e7a11252d53d099" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-059aa29e110d39d6d_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-00e7a11252d53d099_id}"
}

resource "aws_route_table_association" "tfer--subnet-00fe585624fad502c" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b0161184c07aec6_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-00fe585624fad502c_id}"
}

resource "aws_route_table_association" "tfer--subnet-010d938cd143cfa5b" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-010a49d28502bf9be_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-010d938cd143cfa5b_id}"
}

resource "aws_route_table_association" "tfer--subnet-012e3de3f15043afe" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-01bdd515b4f3383a0_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-012e3de3f15043afe_id}"
}

resource "aws_route_table_association" "tfer--subnet-01414037a5eafa2bd" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-046b92ae4635cd4d2_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-01414037a5eafa2bd_id}"
}

resource "aws_route_table_association" "tfer--subnet-0184c0dfec8ba4691" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b472d6b3b99f3b4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0184c0dfec8ba4691_id}"
}

resource "aws_route_table_association" "tfer--subnet-019bafbeb30016c19" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-05c58e4d57b41507c_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-019bafbeb30016c19_id}"
}

resource "aws_route_table_association" "tfer--subnet-023e5d283d3c95c37" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-068f914dfc58e0621_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-023e5d283d3c95c37_id}"
}

resource "aws_route_table_association" "tfer--subnet-02b499a6d981becd9" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-00b147beb89bbe266_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-02b499a6d981becd9_id}"
}

resource "aws_route_table_association" "tfer--subnet-02bd2edb4de1d31f0" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-08c6db5973a498b96_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-02bd2edb4de1d31f0_id}"
}

resource "aws_route_table_association" "tfer--subnet-02bfa1ec9485ccbd6" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-05c58e4d57b41507c_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-02bfa1ec9485ccbd6_id}"
}

resource "aws_route_table_association" "tfer--subnet-02f28a9723c0a6880" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-04cbe91db1f4c000c_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-02f28a9723c0a6880_id}"
}

resource "aws_route_table_association" "tfer--subnet-03208633fc0003ed2" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0ee6153ce704790dc_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-03208633fc0003ed2_id}"
}

resource "aws_route_table_association" "tfer--subnet-03d77889a7d7cec26" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0c5f66ecb5b6c21c5_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-03d77889a7d7cec26_id}"
}

resource "aws_route_table_association" "tfer--subnet-03d88fd39e0303f7d" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b472d6b3b99f3b4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-03d88fd39e0303f7d_id}"
}

resource "aws_route_table_association" "tfer--subnet-03df233962b5b9895" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-000f3d8fea01e2e54_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-03df233962b5b9895_id}"
}

resource "aws_route_table_association" "tfer--subnet-0406d282f511c33ca" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-09f71fd5011985299_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0406d282f511c33ca_id}"
}

resource "aws_route_table_association" "tfer--subnet-0468e933b4fdab115" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0055e4277d5b1309f_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0468e933b4fdab115_id}"
}

resource "aws_route_table_association" "tfer--subnet-048df857666f497b2" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0063bb46787d4ad18_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-048df857666f497b2_id}"
}

resource "aws_route_table_association" "tfer--subnet-04dbb51903521e551" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0063bb46787d4ad18_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-04dbb51903521e551_id}"
}

resource "aws_route_table_association" "tfer--subnet-04e6bc93755db4780" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0dba065f1414a11b2_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-04e6bc93755db4780_id}"
}

resource "aws_route_table_association" "tfer--subnet-04f43be43718d6387" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0a30626817f2365e7_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-04f43be43718d6387_id}"
}

resource "aws_route_table_association" "tfer--subnet-04f934b5dd92afc2b" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0dba065f1414a11b2_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-04f934b5dd92afc2b_id}"
}

resource "aws_route_table_association" "tfer--subnet-052928045b461bd10" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0e6845a0841506cca_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-052928045b461bd10_id}"
}

resource "aws_route_table_association" "tfer--subnet-05a75df6462060933" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-00f03e4c01212d25e_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-05a75df6462060933_id}"
}

resource "aws_route_table_association" "tfer--subnet-05f9aad22ed12c8c8" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0dc3744cda1666daa_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-05f9aad22ed12c8c8_id}"
}

resource "aws_route_table_association" "tfer--subnet-064d2805fcb8e9514" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f9f399afe57c6f27_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-064d2805fcb8e9514_id}"
}

resource "aws_route_table_association" "tfer--subnet-065679fd74300ff63" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0a30626817f2365e7_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-065679fd74300ff63_id}"
}

resource "aws_route_table_association" "tfer--subnet-070c17a7438d0faef" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f61c0e9c2bcfd63f_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-070c17a7438d0faef_id}"
}

resource "aws_route_table_association" "tfer--subnet-071e1b16b635f632a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0ee6c8c75d6b06737_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-071e1b16b635f632a_id}"
}

resource "aws_route_table_association" "tfer--subnet-0742f98b1dfbc5214" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-000f3d8fea01e2e54_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0742f98b1dfbc5214_id}"
}

resource "aws_route_table_association" "tfer--subnet-074bf17aae2dba706" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b472d6b3b99f3b4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-074bf17aae2dba706_id}"
}

resource "aws_route_table_association" "tfer--subnet-07837dadc50a3213a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-04d39e25507983a2c_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-07837dadc50a3213a_id}"
}

resource "aws_route_table_association" "tfer--subnet-0794bcdafbe8da12b" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0dc3744cda1666daa_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0794bcdafbe8da12b_id}"
}

resource "aws_route_table_association" "tfer--subnet-07b3560784b6c8a4d" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-068f914dfc58e0621_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-07b3560784b6c8a4d_id}"
}

resource "aws_route_table_association" "tfer--subnet-07cc6a65506c506ca" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-01bdd515b4f3383a0_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-07cc6a65506c506ca_id}"
}

resource "aws_route_table_association" "tfer--subnet-08795c4a15a5e15df" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-080404d15e7f86fc5_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-08795c4a15a5e15df_id}"
}

resource "aws_route_table_association" "tfer--subnet-0919001dae778877a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-08c6db5973a498b96_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0919001dae778877a_id}"
}

resource "aws_route_table_association" "tfer--subnet-09705217965c59e5a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0d1949a70862af3e4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-09705217965c59e5a_id}"
}

resource "aws_route_table_association" "tfer--subnet-0972cc251792d5095" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f86c4e8d65480c61_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0972cc251792d5095_id}"
}

resource "aws_route_table_association" "tfer--subnet-097694c121c7b7bb7" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b472d6b3b99f3b4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-097694c121c7b7bb7_id}"
}

resource "aws_route_table_association" "tfer--subnet-0a1bb7b133000a0d6" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-09ef20452e1beca94_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0a1bb7b133000a0d6_id}"
}

resource "aws_route_table_association" "tfer--subnet-0a8336384b6d3b85b" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0055e4277d5b1309f_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0a8336384b6d3b85b_id}"
}

resource "aws_route_table_association" "tfer--subnet-0a90d5c353da427c6" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-010a49d28502bf9be_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0a90d5c353da427c6_id}"
}

resource "aws_route_table_association" "tfer--subnet-0ade8070d5563cde3" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f2af54607be57af0_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0ade8070d5563cde3_id}"
}

resource "aws_route_table_association" "tfer--subnet-0c23ba0951f9296fa" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b472d6b3b99f3b4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0c23ba0951f9296fa_id}"
}

resource "aws_route_table_association" "tfer--subnet-0c4e66d37885ae4e7" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-04cbe91db1f4c000c_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0c4e66d37885ae4e7_id}"
}

resource "aws_route_table_association" "tfer--subnet-0cf84627daa4a19a5" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-07b0161184c07aec6_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0cf84627daa4a19a5_id}"
}

resource "aws_route_table_association" "tfer--subnet-0d9f83e21ccbacf25" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f9f399afe57c6f27_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0d9f83e21ccbacf25_id}"
}

resource "aws_route_table_association" "tfer--subnet-0e320d61192515d93" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0f86c4e8d65480c61_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0e320d61192515d93_id}"
}

resource "aws_route_table_association" "tfer--subnet-0e4dfbf05c6273091" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0d1949a70862af3e4_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0e4dfbf05c6273091_id}"
}

resource "aws_route_table_association" "tfer--subnet-0e7be37767717a051" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-09742f0c0f3d75002_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0e7be37767717a051_id}"
}

resource "aws_route_table_association" "tfer--subnet-0edfab6c9b2870f9b" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-080404d15e7f86fc5_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0edfab6c9b2870f9b_id}"
}

resource "aws_route_table_association" "tfer--subnet-0f5d4b510588d151a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-0c5f66ecb5b6c21c5_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0f5d4b510588d151a_id}"
}

resource "aws_route_table_association" "tfer--subnet-0fa0c760cde6d926f" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-049d578059cce0b5d_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0fa0c760cde6d926f_id}"
}

resource "aws_route_table_association" "tfer--subnet-0fa413b471b4a729a" {
  route_table_id = "${data.terraform_remote_state.route_table.outputs.aws_route_table_tfer--rtb-09ef20452e1beca94_id}"
  subnet_id      = "${data.terraform_remote_state.subnet.outputs.aws_subnet_tfer--subnet-0fa413b471b4a729a_id}"
}
